Changes made to Create Event css

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -25,6 +25,19 @@ form
   label
     display: inline-block
     min-width: 120px
+    text-size: 25px
+
+  div
+    padding: 10px 10px
+
+  input[type=submit]
+    color: grey
+    background-color: white
+    border-radius: 5px 5px
+    margin: 20px 45%
+    &:hover
+      color: black
+
 
 header
   h1, nav
