--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -9,7 +9,7 @@
         :order => [:month, :day, :year, :hour, :minute], :minute_step => 15  %>
   </div>
   <div>
-    <%= form.label :who %>
+    <%= form.label :"who", "Open To" %>
     <%= form.text_field :who %>
   </div>
   <div>
