Events controller edited

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,13 @@
 <div class="upcoming-events">
+  <h1> Upcoming Events </h1>
+  <%= debug @by_month %>
+  <table> 
+    <tr>
+      
+      Event Name
+    </tr>
+
+  </table>
 </div>
 <h3>Events I Created</h3>
 <table>
