download attendees as csv

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
     <% end %>
     <header>
       <% if current_user %>
-        <h1><%= link_to "Events", user_events_path(current_user)%></h1>
+        <h1><%= link_to "Events", root_path %></h1>
         <nav>
           <ul>
-            <li><%= link_to "Past Events", "#" %></li>
+            <li><%= link_to "Past Events", events_path %></li>
             <li><%= link_to "Create Event", new_user_event_path(current_user) %></li>
             <li>Upload Photos</li>
 
