--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,44 +1,48 @@
-<div>
-  <h1>
+<div class= "event">
+  <h2>
     <%= @event.name %>
-    <%= form_tag event_attend_path(@event) do |form| %>
-      <% if @event.attended_by? current_user %>
-        <input class="rsvp" type="checkbox" checked="checked"/> Attending
-      <% else %>
-        <input class="rsvp" type="checkbox"/> Attending
+    <span class="rsvp-info">
+      <%= form_tag event_attend_path(@event) do |form| %>
+        <% if @event.attended_by? current_user %>
+          <input class="rsvp" type="checkbox" checked="checked"/> Attending
+        <% else %>
+          <input class="rsvp" type="checkbox"/> Attending
+        <% end %>
       <% end %>
-    <% end %>
-    <script>
-      $(document).on('click', 'input.rsvp', function(event) {
-        var url = $(this).closest('form').attr('action');
-        $.post(url, {attend: $(this).prop('checked')})
-        
-      });
-    </script>
-      
+
       <%= link_to 'See Attendees', event_users_path(@event) %>
 
-       <% if @event.created_by?(current_user) %>
-      <%= link_to 'Edit', edit_event_url(@event) %>
-    <% else %>
-      <%= link_to 'attend', event_attend_url(@event, :user_id => current_user.id), :method => :post %>
-    <% end %>
+      <% if @event.created_by?(current_user) %>
+        <%= link_to 'Edit', edit_event_url(@event) %>
+      <% end %>
     </span>
-  </h1>
+  </h2>
   
-  <div>
+  <section>
     <%= @event.occurs_at.try(:strftime, "%B %d, %l:%M %p") %>
-  </div>
+    &ndash;
+    <%= @event.ends_at.try(:strftime, "%B %d, %l:%M %p") %>    
+  </section>
 
-  <div>
+  <section>
+    <label>Location: </label>
     <%= @event.location %>
-  </div>
+  </section>
 
-  <div>
+  <section>
+    <label> Open to: </label> 
     <%= @event.who %>
-  </div>
+  </section>
 
-  <div>
+  <section>
     <%= @event.description %>
-  </div>
+  </section>
 </div>
+
+<script>
+  $(document).on('click', 'input.rsvp', function(event) {
+    var url = $(this).closest('form').attr('action');
+    $.post(url, {attend: $(this).prop('checked')})
+    
+  });
+</script>
