photos added, style changed

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -56,3 +56,10 @@ header
     li
       display: inline
       margin: 0 10px
+
+h2
+  padding: 350px 10px 20px
+  background: url('/assets/splash.jpg') no-repeat
+  background-size: 100%
+  color: white
+  font-size: 30px
