--- a/app/assets/stylesheets/events.css.sass
+++ b/app/assets/stylesheets/events.css.sass
@@ -2,6 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+table.upcoming
+  width: 70%
+  td
+    padding: 0.5em 0
+  tr:hover
+    background-color: hsla(0, 0%, 0%, 0.1)
+
+
 .event
   h2
     margin-bottom: 2em
