--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <div class="upcoming-events">
-  <h1><%= params.key?(:event) ? "Past Events" : "Upcoming Events" %></h1>
+  <h2><%= params.key?(:event) ? "Past Events" : "Upcoming Events" %></h2>
 
   <% if params[:event] %>
     <%= form_tag url_for, :method => :get do %>
@@ -10,30 +10,19 @@
   <% end %>
 
 </div>
-<h3>Events</h3>
-<table>
-  <tr>
-    <th>
-      Name
-    </th>
-    <th>
-      Address
-    </th>
-    <th>
-      Date
-    </th>
-  </tr>
+<table class="upcoming">
 <% @events.each do |event| %>
   <tr>
     <td>
       <%= link_to event.name, event %>
     </td>
     <td>
-      <%= event.location %>
-    </td>
-    <td>
       <%= event.occurs_at.try(:strftime, "%B %d, %l:%M %p") %>
     </td>
+    <td>
+      <%= event.location %>
+    </td>
+
   </tr>
 <% end %>
 </table>
