Button styles changed

--- a/app/assets/stylesheets/events.css.sass
+++ b/app/assets/stylesheets/events.css.sass
@@ -22,3 +22,9 @@ table.upcoming
 
   section
     margin: 1em 0
+
+form.new_event
+  width: 60%
+  .create-new-button
+    text-align: right
+    margin-right: 42px
