--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -25,7 +25,7 @@
     <%= form.label :description %>
     <%= form.text_area :description %>
   </div>
-  <div>
+  <div class="create-new-button">
     <%= form.submit %>
   </div>
 <% end %>
