--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -33,7 +33,7 @@ form
   div
     padding: 10px 10px
 
-  input, textarea
+  input[type=text], input[type=email], input[type=password], input[type=submit], textarea
     border: solid 1px hsla(0, 0%, 0%, 0.2)
     border-radius: 3px
     box-shadow: inset 0 1px 2px hsla(0, 0%, 0%, 0.2)
