Maps feature added

--- a/app/assets/stylesheets/events.css.sass
+++ b/app/assets/stylesheets/events.css.sass
@@ -28,3 +28,8 @@ form.new_event
   .create-new-button
     text-align: right
     margin-right: 42px
+
+img.map
+  float: right
+  margin-left: 20px
+  margin-bottom: 20px
