--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,7 +19,9 @@
   </div>
   <div>
     <%= form.label :location %>
-    <%= form.text_field :location %>
+    <%= form.text_field :location, placeholder: "Name"%><br/>
+    <label></label>
+    <%= form.text_field :address, placeholder: "Address"%>
   </div>
   <div>
     <%= form.label :description %>
