--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -38,6 +38,7 @@ form
     border-radius: 3px
     box-shadow: inset 0 1px 2px hsla(0, 0%, 0%, 0.2)
     width: 70%
+    padding: 3px
 
   input[type=submit]
     color: grey
