--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -31,7 +31,7 @@ form
     text-size: 25px
 
   div
-    padding: 10px 10px
+    padding: 10px 0
 
   input[type=text], input[type=email], input[type=password], input[type=submit], textarea
     border: solid 1px hsla(0, 0%, 0%, 0.2)
