--- a/app/assets/stylesheets/events.css.sass
+++ b/app/assets/stylesheets/events.css.sass
@@ -36,3 +36,11 @@ img.map
   float: right
   margin-left: 20px
   margin-bottom: 20px
+
+.comment
+  margin-bottom: 1em
+  width: 70%
+  line-height: 130%
+  .comment-author
+    font-size: 0.7em
+    color: grey
