--- a/app/views/comment/_form.html.erb
+++ b/app/views/comment/_form.html.erb
@@ -1,7 +1,6 @@
 <%= form_for([@event, comment]) do |form| %>
   <div>
-    <%= form.label :body %>
-    <%= form.text_field :body %>
+    <%= form.text_area :body %>
   </div>
   <div>
     <%= form.submit %>
