--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -45,8 +45,12 @@
 <div>
   <h3> Comments </h3>
   <% @event.comments.each do |comment| %>
-    <%= comment.body %> <br />
-    <%= comment.creator.email %> wrote at <%= comment.created_at %> <br />
+    <div class="comment">
+      <%= comment.body %> 
+      <div class="comment-author">
+        <%= comment.creator.email %> wrote at <%= comment.created_at.to_formatted_s(:short) %> 
+      </div>
+    </div>
   <% end %>
   <%= render :partial => 'comment/form', :locals => {
     :comment => Comment.new
